# Schedule_Maker

./: .gitignore  README.md  cred.json  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
App/: SM.py  Schedule_Maker.py  Scheduler.py  TerminalApp.py  main.py
Clients/: CalendarClient.py  Client.py  GoogleClient.py
Conf/: .google_credentials.json
Core/Interface/: API.py  Extractor.py  Matcher.py  Parser.py  Tokenizer.py
Core/Interface/APIs/: API.py  Auth.py  CalendarAPI.py  TranslationAPI.py
Core/Models/: LanguageMatch.py  Match.py  Period.py  Recurrence.py  Schedule.py
Core/Models/Enum/: Field.py  Priority.py
Core/Models/Events/: Appointement.py  Class.py  Entertainment.py  Event.py  Meeting.py
Core/Models/Time/: Period.py  Recurrence.py
Infrastructure/Clients/: Client.py  GoogleClient.py
Infrastructure/Services/: APIService.py  EventService.py  GoogleAPI.py  LanguageService.py  Spacy.py  ZoneService.py
Infrastructure/Services/Files/: FileService.py  __init__.py
Infrastructure/Services/Google/: GoogleAPI.py  GoogleAuth.py  GoogleCalendar.py  GoogleCalendarAPI.py  GoogleTranslator.py  __init__.py
Infrastructure/Services/Language/: LanguageService.py  Spacy.py
Infrastructure/Utils/: ColorFormatter.py  EventImports.py  EventParser.py  FileHandler.py  Help_texts.py  LanguageHandler.py  Logger.py  help_texts.py
Infrastructure/Utils/CLI/: ColorFormatter.py  Loader.py  Logger.py  LoggerConfig.py
Infrastructure/Utils/Helpers/: EventImports.py  Help_texts.py  Imports.py  Normalizer.py  patterns.py  spacy_patterns.py
Infrastructure/Utils/Logs/: Logger.py  PerformanceTracker.py
Infrastructure/Utils/Matchers/: TitleMatcher.py
Infrastructure/Utils/Parser/: EventParser.py  LanguageHandler.py  TimeParser.py
Interfaces/: OCR.py
Models/: Box.py  Class.py  Event.py  Menu.py  Period.py  ProcessResult.py  Schedule.py  Session.py  menu.py  menu_action.py
Models/Enum/: Priority.py
Models/Events/: Class.py  Event.py
Models/Tables/: Box.py  Position.py  Table.py
Models/enum/: Day.py
Services/: APIService.py  CalendarService.py  EventService.py  FileService.py  Logger.py  OCRService.py  ScheduleService.py  TesseractService.py
Services/OCR/: PaddleOCR.py  TesseractOCR.py
Test/: LanguageTest.py  test_sentences.txt
Utils/: FileHandler.py  ImageHandler.py  Logger.py  Scheduler_Utils.py
Utils/OCR/: PaddleOCR.py  TesseractOCR.py
conf/: init.bat  init.sh
test/: test_sentences.txt
(+29 files in other folders)
