[project]
name = "sm"
version = "0.1.7.1"
description = "Terminal-based Python app that quickly creates Google Calendar events from natural language."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "proudhater", email = "cboleku162004@gmail.com" }
]

dependencies = [
    "typer[all]",
    "aiohttp",
    "deep-translator",
    "dateparser",
    "google-api-core",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "googleapis-common-protos",
    "spacy==3.8.7"
]

[project.scripts]
sm = "App.main:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["App*", "Core*", "Infrastructure*"]
